--- a/test_resources/test_user_agent_parser.yaml
+++ b/test_resources/test_user_agent_parser.yaml
@@ -867,3 +867,25 @@ test_cases:
     major: '11'
     minor: '0'
     patch:
+
+  - user_agent_string: 'Mozilla/5.0 (Unknown; Linux armv7l) AppleWebKit/537.1+ (KHTML, like Gecko) Safari/537.1+ HbbTV/1.1.1 ( ;LGE ;NetCast 4.0 ;03.20.30 ;1.0M ;)'
+    family: 'HbbTV'
+    major: 'NetCast 4.0 '
+    minor: '03.20.30 '
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'HbbTV/1.1.1 (;Panasonic;VIERA 2012;1.261;0071-3103 2000-0000;)'
+    family: 'HbbTV'
+    major: 'VIERA 2012'
+    minor: '1.261'
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'Opera/9.80 (Linux armv7l; HbbTV/1.1.1 (; Sony; KDL32W650A; PKG3.211EUA; 2013;); ) Presto/2.12.362 Version/12.11'
+    family: 'HbbTV'
+    major: 'KDL32W650A'
+    minor: 'PKG3.211EUA'
+    patch:
+    patch_minor:
+
