--- a/test_resources/test_device.yaml
+++ b/test_resources/test_device.yaml
@@ -193,7 +193,7 @@ test_cases:
     family: 'Generic Smartphone'
 
   - user_agent_string: 'Opera/9.80 (VRE; Opera Mini/4.2/28.2794; U; en) Presto/2.8.119 Version/11.10'
-    family: 'Other'
+    family: 'Generic Smartphone'
 
   - user_agent_string: 'Mozilla/5.0 (Mobile; rv:15.0) Gecko/15.0 Firefox/15.0'
     family: 'Generic Smartphone'
