--- a/test_resources/test_user_agent_parser.yaml
+++ b/test_resources/test_user_agent_parser.yaml
@@ -12,12 +12,6 @@ test_cases:
     major: '1'
     minor: '1'
     patch: '0-80'
-
-  - user_agent_string: 'Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10_6_3; en-us; Silk/1.1.0-80) AppleWebKit/533.16 (KHTML, like Gecko) Version/5.0 Safari/533.16 Silk-Accelerated=true'
-    family: 'Amazon Silk'
-    major: '1'
-    minor: '1'
-    patch: '0-80'
     patch_minor:
 
   - user_agent_string: 'Mozilla/5.0 (Linux; U; en-us; KFTT Build/IML74K) AppleWebKit/535.19 (KHTML, like Gecko) Silk/2.0 Safari/535.19 Silk-Accelerated=false'
@@ -161,7 +155,6 @@ test_cases:
     patch_minor:
 
   - user_agent_string: 'Mozilla/4.0 (compatible; MSIE 8.0; Windows NT 6.0; Trident/4.0; chromeframe; SLCC1; .NET CLR 2.0.50727; .NET CLR 3.5.30729; .NET CLR 3.0.30729)'
-    #js_ua: "{'js_user_agent_string': 'Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US) AppleWebKit/530.1 (KHTML, like Gecko) Chrome/2.0.169.1 Safari/530.1'}"
     family: 'IE'
     major: '8'
     minor: '0'
@@ -169,7 +162,6 @@ test_cases:
     patch_minor:
 
   - user_agent_string: 'Mozilla/4.0 (compatible; MSIE 8.0; Windows NT 5.1; Trident/4.0; chromeframe; .NET CLR 2.0.50727; .NET CLR 3.0.4506.2152; .NET CLR 3.5.30729; Sleipnir 2.8.5)3.0.30729)'
-    #js_ua: "{'js_user_agent_string': 'Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US) AppleWebKit/530.1 (KHTML, like Gecko) Chrome/2.0.169.1 Safari/530.1'}"
     family: 'Sleipnir'
     major: '2'
     minor: '8'
@@ -335,12 +327,6 @@ test_cases:
     major: '9'
     minor: '0'
     patch:
-
-  - user_agent_string: 'Mozilla/5.0 (compatible; MSIE 9.0; Windows Phone OS 7.5; Trident/5.0; IEMobile/9.0; SAMSUNG; SGH-i917)'
-    family: 'IE Mobile'
-    major: '9'
-    minor: '0'
-    patch:
     patch_minor:
 
   - user_agent_string: 'Mozilla/5.0 (compatible; MSIE 9.0; Windows Phone OS 7.5; Trident/5.0; IEMobile/9.0; NOKIA; Lumia 800)'
@@ -358,7 +344,6 @@ test_cases:
     patch_minor:
 
   - user_agent_string: 'Mozilla/4.0 (compatible; MSIE 8.0; Windows NT 5.1; Trident/4.0; GTB6; .NET CLR 2.0.50727; .NET CLR 1.1.4322)'
-    #js_ua: "{'js_user_agent_string': 'Mozilla/4.0 (compatible; MSIE 8.0; Windows NT 5.1; Trident/4.0; .NET CLR 2.0.50727; .NET CLR 1.1.4322)', 'js_user_agent_family': 'IE Platform Preview', 'js_user_agent_v1': '9', 'js_user_agent_v2': '0', 'js_user_agent_v3': '1'}"
     family: 'IE'
     major: '8'
     minor: '0'
@@ -387,7 +372,6 @@ test_cases:
     patch_minor:
 
   - user_agent_string: 'Mozilla/4.0 (compatible; MSIE 8.0; Windows NT 5.1; Trident/4.0; GTB6; chromeframe; .NET CLR 2.0.50727; .NET CLR 1.1.4322; .NET CLR 3.0.04506.648; .NET CLR 3.5.21022; .NET CLR 3.0.4506.2152; .NET CLR 3.5.30729)'
-    #js_ua: "{'js_user_agent_string': 'Mozilla/4.0 (compatible; MSIE 8.0; Windows NT 5.1; Trident/4.0; chromeframe; .NET CLR 2.0.50727; .NET CLR 1.1.4322; .NET CLR 3.0.04506.648; .NET CLR 3.5.21022; .NET CLR 3.0.4506.2152; .NET CLR 3.5.30729)'}"
     family: 'IE'
     major: '8'
     minor: '0'
@@ -497,6 +481,7 @@ test_cases:
     major: '3'
     minor: '3'
     patch:
+    patch_minor:
 
   - user_agent_string: 'Mozilla/5.0 (Nintendo 3DS; U; ; en) Version/1.7498.US'
     family: 'NetFront NX'
@@ -516,13 +501,6 @@ test_cases:
     family: 'NetFront'
     major: '3'
     minor: '2'
-    patch:
-    patch_minor:
-
-  - user_agent_string: 'Mozilla/4.0 (compatible; Linux 2.6.10) NetFront/3.3 Kindle/1.0 (screen 600x800)'
-    family: 'NetFront'
-    major: '3'
-    minor: '3'
     patch:
     patch_minor:
 
@@ -916,12 +894,6 @@ test_cases:
     major: '534'
     minor:
     patch:
-
-  - user_agent_string: 'Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/534+ (KHTML, like Gecko) Version/5.1.1 Safari/534.51.22'
-    family: 'WebKit Nightly'
-    major: '534'
-    minor:
-    patch:
     patch_minor:
 
   - user_agent_string: 'Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.1+ (KHTML, like Gecko) Version/5.1.1 Safari/534.51.22'
@@ -1027,5 +999,145 @@ test_cases:
     major: '1'
     minor: '1'
     patch: '1'
+    patch_minor:
+
+  - user_agent_string: 'Openwave (Linux; U; 4.0.4; zh-cn; A100; 480*782) UCWEB7.9.0.94/139/444'
+    family: 'UC Browser'
+    major: '7'
+    minor: '9'
+    patch: '0'
+    patch_minor:
+
+  - user_agent_string: 'Openwave (Linux; U; 4.0.4; zh-cn; MID1045; 1280*752) UCWEB7.9.0.94/139/444'
+    family: 'UC Browser'
+    major: '7'
+    minor: '9'
+    patch: '0'
+    patch_minor:
+
+  - user_agent_string: 'SAMSUNG-C3050/1.0 Openwave/6.2.3 Profile/MIDP-2.0 Configuration/CLDC-1.1'
+    family: 'Openwave'
+    major: '6'
+    minor: '2'
+    patch: '3'
+    patch_minor:
+
+  - user_agent_string: 'SAMSUNG-C3050/1.0 Openwave/6.2.3 Profile/MIDP-2.0 Configuration/CLDC-1.1 UP.Browser/6.2.3.3.c.1.101 (GUI) MMP/2.0'
+    family: 'Openwave'
+    major: '6'
+    minor: '2'
+    patch: '3'
+    patch_minor:
+
+  - user_agent_string: 'SAMSUNG-GT-C3060/1.0 Openwave/6.2.3 Profile/MIDP-2.0 Configuration/CLDC-1.1 UP.Browser/6.2.3.3.c.1.101 (GUI) MMP/2.0'
+    family: 'Openwave'
+    major: '6'
+    minor: '2'
+    patch: '3'
+    patch_minor:
+
+  - user_agent_string: 'SEC-SGHB310/1.0 Openwave/6.2.3 Profile/MIDP-2.0 Configuration/CLDC-1.1 UP.Browser/6.2.3.3.c.1.101 (GUI) MMP/2.0'
+    family: 'Openwave'
+    major: '6'
+    minor: '2'
+    patch: '3'
+    patch_minor:
+
+  - user_agent_string: 'SEC-SGHE215L/1.0 Openwave/6.2.3 Profile/MIDP-2.0 Configuration/CLDC-1.1 UP.Browser/6.2.3.3.c.1.101 (GUI) MMP/2.0'
+    family: 'Openwave'
+    major: '6'
+    minor: '2'
+    patch: '3'
+    patch_minor:
+
+  - user_agent_string: 'SEC-SGHM600/1.0 Openwave/6.2.3 Profile/MIDP-2.0 Configuration/CLDC-1.1 UP.Browser/6.2.3.3.c.1.101 (GUI) MMP/2.0'
+    family: 'Openwave'
+    major: '6'
+    minor: '2'
+    patch: '3'
+    patch_minor:
+
+  - user_agent_string: 'Samsung-SGH-B320/1.0 Openwave/6.2.3 Profile/MIDP-2.0 Configuration/CLDC-1.1 UP.Browser/6.2.3.3.c.1.101 (GUI) MMP/2.0'
+    family: 'Openwave'
+    major: '6'
+    minor: '2'
+    patch: '3'
+    patch_minor:
+
+  - user_agent_string: 'Vodafone/1.0/SamsungC3050/C3050BUIC6 Browser/Openwave/6.2.3 Profile/MIDP-2.0 Configuration/CLDC-1.1 UP.Browser/6.2.3.3.c.1.101 (GUI) MMP/2.0'
+    family: 'Openwave'
+    major: '6'
+    minor: '2'
+    patch: '3'
+    patch_minor:
+
+  - user_agent_string: 'Vodafone/1.0/SamsungSGHM300V/M300AUGG2/Browser/Openwave/6.2.3 Profile/MIDP-2.0 Configuration/CLDC-1.1 UP.Browser/6.2.3.3.c.1.101 (GUI) MMP/2.0'
+    family: 'Openwave'
+    major: '6'
+    minor: '2'
+    patch: '3'
+    patch_minor:
+
+  - user_agent_string: 'Mozilla/4.0 (compatible; MSIE 9.0b; Xbox-OS2) Obsidian'
+    family: 'IE'
+    major: '9'
+    minor: '0'
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'Mozilla/4.0 (compatible; MSIE 7.0b; Xbox-OS2) Obsidian'
+    family: 'IE'
+    major: '7'
+    minor: '0'
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'Mozilla/5.0 (compatible; MSIE 9.0; Windows Phone OS 7.5; Trident/5.0; IEMobile/9.0; Xbox)'
+    family: 'IE Xbox'
+    major: '9'
+    minor: '0'
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'Mozilla/4.0 (compatible; MSIE 7.0; Windows NT 6.1; Trident/3.1; Xbox)'
+    family: 'IE Xbox'
+    major: '7'
+    minor: '0'
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'Mozilla/4.0 (compatible; MSIE 7.0; Windows Phone OS 7.5; Trident/3.1; IEMobile/7.0; Xbox)'
+    family: 'IE Xbox'
+    major: '7'
+    minor: '0'
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'Mozilla/5.0 (compatible; MSIE 9.0; Windows NT 6.1; Trident/5.0; Xbox)'
+    family: 'IE Xbox'
+    major: '9'
+    minor: '0'
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'XBMC/3.3-DEV-r31572 (Xbox; http://www.xbmc.org)'
+    family: 'XBMC'
+    major: '3'
+    minor: '3'
+    patch: 'r31572'
+    patch_minor:
+
+  - user_agent_string: 'XBMC/9.04-beta1 r19639 (Windows; Windows XP Professional Service Pack 2 build 2600; http://www.xbmc.org)'
+    family: 'XBMC'
+    major: '9'
+    minor: '04'
+    patch: 'r19639'
+    patch_minor:
+
+  - user_agent_string: 'XBMC/9.04 r19840 (Mac OS X; Darwin 9.6.0; http://www.xbmc.org)'
+    family: 'XBMC'
+    major: '9'
+    minor: '04'
+    patch: 'r19840'
     patch_minor:
 
