--- a/test_resources/test_user_agent_parser.yaml
+++ b/test_resources/test_user_agent_parser.yaml
@@ -236,6 +236,7 @@ test_cases:
     major: '1'
     minor: '0'
     patch:
+    patch_minor:
 
   - user_agent_string: 'Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9.1.1pre) Gecko/20090717 Ubuntu/9.04 (jaunty) Shiretoko/3.5.1pre'
     family: 'Firefox (Shiretoko)'
@@ -851,48 +852,56 @@ test_cases:
     major: '2'
     minor: '6'
     patch: '4'
+    patch_minor:
 
   - user_agent_string: 'Mozilla/5.0 (X11; Linux x86_64; rv:24.0) Gecko/20100101 Thunderbird/24.2.0'
     family: 'Thunderbird'
     major: '24'
     minor: '2'
     patch: '0'
+    patch_minor:
 
   - user_agent_string: 'Mozilla/4.0 (compatible; MSIE 7.0; Windows NT 5.1; .NET CLR 1.1.4322; .NET CLR 2.0.50727; MSOffice 12)'
     family: 'Outlook'
-    major:  '2007'
+    major: '2007'
     minor:
     patch:
+    patch_minor:
 
   - user_agent_string: 'Mozilla/4.0 (compatible; MSIE 7.0; Windows NT 6.0; Trident/4.0; InfoPath.2; MSOffice 14)'
     family: 'Outlook'
-    major:  '2010'
+    major: '2010'
     minor:
     patch:
+    patch_minor:
 
   - user_agent_string: 'Mozilla/4.0 (compatible; MSIE 7.0; Windows NT 6.1; Trident/6.0; Microsoft Outlook 15.0.4420)'
     family: 'Outlook'
-    major:  '2013'
+    major: '2013'
     minor:
     patch:
+    patch_minor:
 
   - user_agent_string: 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_8_2) AppleWebKit/536.26.14 (KHTML, like Gecko)'
     family: 'AppleMail'
     major: '536'
     minor: '26'
     patch: '14'
+    patch_minor:
 
   - user_agent_string: 'Airmail 1.0 rv:148 (Macintosh; Mac OS X 10.8.3; en_BE)'
     family: 'Airmail'
     major: '1'
     minor: '0'
     patch:
+    patch_minor:
 
   - user_agent_string: 'Airmail 1.0.6 rv:196 (Macintosh; Mac OS X 10.8.4; en_GB)'
     family: 'Airmail'
     major: '1'
     minor: '0'
     patch: '6'
+    patch_minor:
 
   - user_agent_string: 'J2ME/UCWEB7.0.3.45/139/7682'
     family: 'UC Browser'
@@ -1221,3 +1230,5 @@ test_cases:
     major: '11'
     minor: '0'
     patch:
+    patch_minor:
+
