--- a/test_resources/test_user_agent_parser_os.yaml
+++ b/test_resources/test_user_agent_parser_os.yaml
@@ -1086,7 +1086,7 @@ test_cases:
     patch_minor:
 
   - user_agent_string: 'Mozilla Compatible/2.0 (WinNT; I; NCC/2.0)Mozilla/5.0 (Windows; U; WindowsCE 5.2; en-US; rv:1.9.2.2pre) Gecko/20100209 Namoroka/3.6.2pre Fennec/1.1a1'
-    family: 'Windows NT'
+    family: 'Windows CE'
     major:
     minor:
     patch:
@@ -1489,5 +1489,33 @@ test_cases:
     major: '10'
     minor: '5'
     patch: '6'
+    patch_minor:
+
+  - user_agent_string: 'Opera/9.80 (Bada; Opera Mini/6.5/34.926; U; uk) Presto/2.8.119 Version/11.10'
+    family: 'Bada'
+    major:
+    minor:
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.1; HTC_Touch2_T3320; Windows Phone 6.5)'
+    family: 'Windows Phone'
+    major: '6'
+    minor: '5'
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.1; Motorola_MC659B_21103; Windows Phone 6.5.3.5)'
+    family: 'Windows Phone'
+    major: '6'
+    minor: '5'
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.1; SonyEricssonX2/R3AA; Profile/MIDP-2.1; Configuration/CLDC-1.1; Windows Phone 6.5.3.5)'
+    family: 'Windows Phone'
+    major: '6'
+    minor: '5'
+    patch:
     patch_minor:
 
