--- a/package.json
+++ b/package.json
@@ -53,6 +53,6 @@
     "mocha": "*"
   },
   "scripts": {
-    "test": "mocha -u tdd ./js/test/*.js"
+    "test": "cd js && mocha && mocha test/load/*.mocha.js"
   }
 }
